[package]
name = "pbuf"
version = "0.3.2"
authors = ["Drazen Urch <github@drazenur.ch>"]
description = "Read/Write to/from anything that implements Read/Write to/from protobuf."
repository = "https://github.com/durch/pbuf"
readme = "README.md"
keywords = ["Google", "protobuf", "read", "write"]
license = "MIT"

[dependencies]
protobuf="1.0.22"
byteorder="0.5.3"
